--- a/06-Plotting with categorical data.tex
+++ b/06-Plotting with categorical data.tex
@@ -1,4 +1,9 @@
-\end{frame}
+\documentclass{beamer}
+
+\usepackage{framed}
+\usepackage{graphicx}
+
+\begin{document}
 %====================================%
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
@@ -13,7 +18,10 @@
 %===================================%
 \begin{frame}[fragile]
 \large
-It’s useful to divide seaborn’s categorical plots into two groups: those that show the full distribution of observations within each level of the categorical variable, and those that apply a statistical estimation to show a measure of central tendency and confidence interval. The former includes the functions stripplot(), boxplot(), and violinplot(), while the latter includes the functions barplot(), countplot(), and pointplot(). These functions all share a basic API for how they accept data, although each has specific parameters that control the particulars of the visualization that is applied to that data.
+\begin{itemize}
+\item It’s useful to divide seaborn’s categorical plots into two groups: those that show the full distribution of observations within each level of the categorical variable, and those that apply a statistical estimation to show a measure of central tendency and confidence interval. \item The former includes the functions \texttt{stripplot()}, boxplot(), and violinplot(), while the latter includes the functions \texttt{barplot()}, \texttt{countplot()}, and \texttt{pointplot()}. \item These functions all share a basic API for how they accept data, although each has specific parameters that control the particulars of the visualization that is applied to that data.
+\end{itemize}
+
 \end{frame}
 %====================================%
 \begin{frame}[fragile]
@@ -58,23 +66,40 @@ Distributions of observations within categories
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
 \large
-
-Categorical scatterplots
+\noindent \textbf{Categorical scatterplots}
 A simple way to show the distribution of some quantitative variable across the levels of a categorical variable uses stripplot(), which generalizes a scatterplot to the case where one of the variables is categorical:
 
 sns.stripplot(x="day", y="total_bill", data=tips);
-../_images/categorical_9_0.png
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{images/categorical_9_0}
+\end{figure}
 \end{frame}
 %====================================%
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
 \large
 It’s also possible to add a nested categorical variable with the hue paramater. Above the color and position on the categorical axis are redundent, but now each provides information about one of the two variables:
-
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	\large
 sns.stripplot(x="day", y="total_bill", hue="time", data=tips);
-../_images/categorical_11_0.png
+\begin{figure}
+\centering
+\includegraphics[width=0.7\linewidth]{images/categorical_11_0}
+\end{figure}
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	\large
 sns.stripplot(x="size", y="total_bill", data=tips.sort("size"));
-../_images/categorical_13_0.png
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{images/categorical_13_0}
+\end{figure}
 \end{frame}
 %====================================%
 \begin{frame}[fragile]
@@ -83,20 +108,32 @@ sns.stripplot(x="size", y="total_bill", data=tips.sort("size"));
 With these plots, it’s often helpful to put the categorical variable on the vertical axis (this is particularly useful when the category names are relatively long or there are many categories):
 
 sns.stripplot(x="total_bill", y="day", hue="time", data=tips);
-../_images/categorical_15_0.png
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{images/categorical_15_0}
+\end{figure}
 \end{frame}
 \section{Boxplots}
 %====================================%
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
 \large
-Boxplots
+\noindent \textbf{Boxplots}
 At a certain point, the categorical scatterplot approach becomes limited in the information it can provide about the distribution of values within each category. There are several ways to summarize this information in ways that facilitate easy comparisons across the category levels.
-
-The first is the familiar boxplot(). This kind of plot shows the three quartile values of the distribution along with extreme values. The “whiskers” extend to points that lie within 1.5 IQRs of the lower and upper quartile, and then observations that fall outside this range are displayed independently. Importantly, this means that each value in the boxplot corresponds to an actual observation in the data:
-
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+The first is the familiar \texttt{boxplot()}. This kind of plot shows the three quartile values of the distribution along with extreme values. The “whiskers” extend to points that lie within 1.5 IQRs of the lower and upper quartile, and then observations that fall outside this range are displayed independently. Importantly, this means that each value in the boxplot corresponds to an actual observation in the data:
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+\begin{verbatim}
 sns.boxplot(x="day", y="total_bill", hue="time", data=tips);
-../_images/categorical_17_0.png
+\end{verbatim}
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{images/categorical_17_0}
+\end{figure}
 \end{frame}
 \section{Violinplots}
 %====================================%
@@ -104,196 +141,72 @@ sns.boxplot(x="day", y="total_bill", hue="time", data=tips);
 \frametitle{Seaborn Workshop}
 \large
 \noindent \textbf{Violinplots}
-A different approach is a violinplot(), which combines a boxplot with the kernel density estimation procedure described in the :ref:`distributions tutorial <distribution_tutorial>`_:
-
+A different approach is a violinplot(), which combines a boxplot with the kernel density estimation procedure described in the distributions tutorial
+\begin{verbatim}
 sns.violinplot(x="total_bill", y="day", hue="time", data=tips);
-../_images/categorical_19_0.png
+\end{verbatim}
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{images/categorical_19_0}
+\end{figure}
 \end{frame}
 %====================================%
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
 \large
 This approach uses the kernel density estimate to provide a better description of the distribution of values. Additionally, the quartile and whikser values from the boxplot are shown inside the violin. Because the violinplot uses a KDE, there are some other parameters that may need tweaking, adding some complexity relative to the straightforward boxplot:
-
+\begin{verbatim}
 sns.violinplot(x="total_bill", y="day", hue="time", data=tips,
-               bw=.1, scale="count", scale_hue=False);
-../_images/categorical_21_0.png
+bw=.1, scale="count", scale_hue=False);
+\end{verbatim}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.7\linewidth]{images/categorical_21_0}
+\end{figure}
+
 \end{frame}
 %====================================%
 \begin{frame}[fragile]
 \frametitle{Seaborn Workshop}
 \large It’s also possible to “split” the violins when the hue parameter has only two levels, which can allow for a more efficient use of space:
-
+\begin{verbatim}
 sns.violinplot(x="day", y="total_bill", hue="sex", data=tips, split=True);
-../_images/categorical_23_0.png
+\end{verbatim}
+\begin{figure}
+\centering
+\includegraphics[width=0.7\linewidth]{images/categorical_23_0}
+\caption{}
+\label{fig:categorical_23_0}
+\end{figure}
+
 \end{frame}
 %====================================%
 \begin{frame}[fragile]
 	\frametitle{Seaborn Workshop}
 Finally, there are several options for the plot that is drawn on the interior of the violins, including ways to show each individual observation instead of the summary boxplot values:
-
+\begin{verbatim}
 sns.violinplot(x="day", y="total_bill", hue="sex", data=tips,
-               split=True, inner="stick", palette="Set3");
-../_images/categorical_25_0.png
+split=True, inner="stick", palette="Set3");
+\end{verbatim}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{images/categorical_25_0}
+\end{figure}
 \end{frame}
 %====================================%
 \begin{frame}[fragile]
 	\frametitle{Seaborn Workshop}
 It can also be useful to combine stripplot() with violinplot() or boxplot() to show each observation along with a summary of the distribution:
-
+\begin{verbatim}
 sns.violinplot(x="day", y="total_bill", data=tips, inner=None)
 sns.stripplot(x="day", y="total_bill", data=tips, jitter=True, size=4);
-../_images/categorical_27_0.png
-Statistical estimation within categories
-Often, rather than showing the distribution within each category, you might want to show the central tendency of the values. Seaborn has two main ways to show this information, but importantly, the basic API for these functions is identical to that for the ones discussed above.
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-\frametitle{Seaborn Workshop}
-\large
-
-Bar plots
-A familiar style of plot that accomplishes this goal is a bar plot. In seaborn, the barplot() function operates on a full dataset and shows an arbitrary estimate, using the mean by default. When there are multiple observations in each category, it also uses bootstrapping to compute a confidence interval around the estimate and plots that using error bars:
-
-sns.barplot(x="sex", y="survived", hue="class", data=titanic);
-../_images/categorical_29_0.png
-A special case for the bar plot is when you want to show the number of observations in each category rather than computing a statistic for a second variable. This is similar to a histogram over a categorical, rather than quantitative, variable. In seaborn, it’s easy to do so with the countplot() function:
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-	\frametitle{Seaborn Workshop}
-	
-sns.countplot(x="deck", data=titanic, palette="Greens_d");
-../_images/categorical_31_0.png
-Both barplot() and countplot() can be invoked with all of the options discussed above, along with others that are demonstrated in the detailed documentation for each function:
-
-sns.countplot(y="deck", hue="class", data=titanic, palette="Greens_d");
-../_images/categorical_33_0.png
-\end{frame}
-\section{Point plots}
-%====================================%
-\begin{frame}[fragile]
-	\frametitle{Seaborn Workshop}
-Point plots
-An alternative style for visualizing the same information is offered by the pointplot() function. This function also encodes the value of the estimate with height on the other axis, but rather than show a full bar it just plots the point estimate and confidence interval. Additionally, pointplot connects points from the same hue category. This makes it easy to see how the main relationship is changing as a function of a second variable, because your eyes are quite good at picking up on differences of slopes:
-\end{frame}
-
-%====================================%
-\begin{frame}[fragile]
-	\frametitle{Seaborn Workshop}
-sns.pointplot(x="sex", y="survived", hue="class", data=titanic);
-../_images/categorical_35_0.png
-To make figures that reproduce well in black and white, it can be good to use different markers and line styles for the levels of the hue category:
-
-sns.pointplot(x="class", y="survived", hue="sex", data=titanic,
-              palette={"male": "g", "female": "m"},
-              markers=["^", "o"], linestyles=["-", "--"]);
-../_images/categorical_37_0.png
-\end{frame}
-\section{Drawing multi-panel categorical plots}
-%====================================%
-\begin{frame}[fragile]
-\frametitle{Seaborn Workshop}
-\large
-
-
-Drawing multi-panel categorical plots
-\begin{itemize}
-\item As we mentioned above, there are two ways to draw categorical plots in seaborn. 
-\item Similar to the duality in the regression plots, you can either use the functions introduced above, or the higher-level function \texttt{factorplot()}, which combines these functions with a \texttt{FacetGrid()} to add the ability to examine additional categories through the larger structure of the figure.
-\end{itemize}
-
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-	\frametitle{Seaborn Workshop}
-	\large
-\begin{itemize}
-\item While the main options for each plot kind are available either way, the lower-level functions have a bit more flexibility in the kind of inputs they can take.
-\item For instance, you can just pass a DataFrame to the data parameter, and the distribution or central tendency of each column in the dataframe will be shown:
-\end{itemize}
-
-
-sns.boxplot(data=iris, orient="h");
-../_images/categorical_39_0.png
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-	\frametitle{Seaborn Workshop}
-	\large
-	
-Additionally, these functions accept vectors of Pandas or numpy objects rather than variables in a DataFrame:
-
-sns.violinplot(x=iris.species, y=iris.sepal_length);
-../_images/categorical_41_0.png
-To control the size and shape of plots made by the functions discussed above, you must set up the figure yourself using matplotlib commands. Of course, this also means that the plots can happily coexist in a multi-panel figure with other kinds of plots:
-
-f, ax = plt.subplots(figsize=(7, 3))
-sns.countplot(y="deck", data=titanic, color="c");
-../_images/categorical_43_0.png
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-	\frametitle{Seaborn Workshop}
-	\large
-	
-The \texttt{factorplot()} function is a higher-level wrapper on these plots that produces a matplotlib figure managed through a FacetGrid:
-
-sns.factorplot(x="day", y="total_bill", hue="smoker", data=tips);
-../_images/categorical_45_0.png
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-	\frametitle{Seaborn Workshop}
-	\large
-	
-By default it uses \texttt{pairplot()}, but the kind parameter lets you chose any of the kinds of plots discussed above:
-
-sns.factorplot(x="day", y="total_bill", hue="smoker", data=tips, kind="bar");
-../_images/categorical_47_0.png
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-	\frametitle{Seaborn Workshop}
-	\large
-	
-The key advantage of \texttt{factorplot()} is that it’s easy to add faceting by additional variables in the DataFrame, such as along the columns:
-
-sns.factorplot(x="day", y="total_bill", hue="smoker",
-               col="time", data=tips, kind="bar");
-../_images/categorical_49_0.png
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-	\frametitle{Seaborn Workshop}
-	\large
-	
-Any kind of plot can be drawn. Because of the way FacetGrid works, to change the size and shape of the figure you need to specify the size and aspect arguments, which apply to a single facet:
-\begin{verbatim}
-sns.factorplot(x="time", y="total_bill", hue="smoker",
-               col="day", data=tips, kind="box", size=4, aspect=.5);
-../_images/categorical_51_0.png
 \end{verbatim}
+\begin{figure}
+\centering
+\includegraphics[width=0.7\linewidth]{images/categorical_27_0}
+\end{figure}
+
+
 \end{frame}
-%====================================%
-\begin{frame}[fragile]
-	\frametitle{Seaborn Workshop}
-	\large
-	
-Because of the generalized API of the categorical plots, they should be easy to apply to other more complex contexts. For example, they are easily combined with a PairGrid to show categorical relationships across several different variables:
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-	\frametitle{Seaborn Workshop}
-	\large
-	\begin{verbatim}
-g = sns.PairGrid(tips,
-                 x_vars=["smoker", "time", "sex"],
-                 y_vars=["total_bill", "tip"],
-                 aspect=.75, size=3.5)
-g.map(sns.violinplot, palette="pastel");
-../_images/categorical_53_0.png
-\end{verbatim}
-\end{frame}
-%====================================%
-\end{document}
